libraries/ui-library/src/components/six-icon-button/six-icon-button.scss
@import 'src/global/component';

:host {
  display: inline-block;
}

.icon-button {
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  background: none;
  border: none;
  border-radius: var(--six-border-radius-medium);
  font-size: inherit;
  color: var(--six-input-icon-color);
  padding: var(--six-spacing-x-small);
  cursor: pointer;
  transition: var(--six-transition-medium) color;
  -webkit-appearance: none;

  &:hover:not(.icon-button--disabled),
  &:focus:not(.icon-button--disabled) {
    color: var(--six-input-icon-color-hover);
  }

  &:active:not(.icon-button--disabled) {
    color: var(--six-input-icon-color);
  }

  &:focus {
    outline: none;
  }

  &:focus-visible {
    outline: var(--six-focus-ring);
    outline-offset: var(--six-focus-ring-offset);
  }
}

.icon-button--disabled {
  opacity: 0.5;
  pointer-events: none;
}

.icon-button-wrapper--disabled {
  cursor: not-allowed;
}

.icon-button ::slotted(six-badge) {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
}

.icon-button six-icon[size='xLarge'] + ::slotted(six-badge) {
  transform: translateY(40%) translateX(-35%);
}

.icon-button six-icon[size='large'] + ::slotted(six-badge) {
  transform: translateY(20%) translateX(-20%);
}

// TODO: tx4u9 should be adjusted for all sizes after design team
.icon-button six-icon[size='medium'] + ::slotted(six-badge) {
  transform: translateY(10%) translateX(50%);
}

.icon-button six-icon[size='small'] + ::slotted(six-badge) {
  //  no translation necessary
}

.icon-button six-icon[size='xSmall'] + ::slotted(six-badge) {
  transform: translateY(-25%) translateX(25%);
}

